# openGLStudy

./: CMakeLists.txt  README.md
Dependencies/glad/include/glad/: glad.h
Dependencies/glad/src/: glad.c
OpenGL/src/: Application.cpp  main.cpp
application/: CMakeLists.txt  application.cpp  application.h
application/camera/: camera.cpp  camera.h  cameraControl.cpp  cameraControl.h  gameCameraController.cpp  gameCameraController.h  orthographicCamera.cpp  orthographicCamera.h  perspectiveCamera.cpp  perspectiveCamera.h  trackBallCameraController.cpp  trackBallCameraController.h
assets/shaders/: fragment.glsl  vertex.glsl
glFramework/: CMakeLists.txt  geometry.cpp  geometry.h  shader.cpp  shader.h  texture.cpp  texture.h
wrapper/: CMakeLists.txt  checkError.cpp  checkError.h
